Version 2.9.8dev:

* Fixed problem on Windows where devices were sometimes not detected.
* Remove kickstart warnings when not using Amiga platform.
* Added elapsed time to log file (to debug startup time).
* Imported updated translations from crowdin.com.

Version 2.9.7dev:

* Fix detection of Windows 10.
* Support building with latest version of MSYS2.
* Include quick setting to toggle display of bezel.
* Quite a bit of changes, but many related to non-Amiga platforms.

Version 2.9.6dev:

* Imported updated translations from crowdin.com.
* Moved additional game databases to a separate settings page.

Version 2.9.5dev:

* Added support for WHDLoad 18.3.
* New quick settings panel (initial version) with toggle button.
* Tweaked Fusion Adwaita theme colors to better match recent GNOME theme.
* Controller configs for 8Bitdo SFC30 and Zero gamepads.
* Controller config for DualShock 3 in bluetooth mode on Linux.
* Make configurations list wider when window width is quite large.
* Remember last selected game list on startup.
* Lots of changes for non-Amiga/CDTV/CD32 game support.
* New GUI setting to enable use of additional game platforms.
* Disable config controls when loading a non-Amiga platform game.
* Fix check for startup-sequence when determining if an archive is WHDLoad.


Version 2.9.4dev:

* Try to use config from game database when launching with a WHDLoad archive.
* New startup argument --no-auto-detect-game to disable the above feature.
* Save directory based on archive name when launching with an archive.
* Fixed a bug where rating icons could disappear from variants list.
* New option whdload_preload, defaults to 1 (change in behavior).
* More language flags for the status bar.
* New option to toggle close buttons in dialogs.
  FIXME: Not in all dialogs yet.
* New reset to defaults button on settings pages.
  FIXME: GUI does not update yet.

Version 2.9.3dev:

* Fix for published/unpublished status of variants.